@@ -1,3 +1,3 @@
 from .library import Library
-from .types import CObject
+from .types import CObject, CRef
 from .utils import get_last_error
